changed image gallerie to grid and fixed icon width on tablet devices

--- a/services.css
+++ b/services.css
@@ -15,15 +15,26 @@ grid-gap: 2px;
 max-width: 800px;
 }
 
+.portfolio-img-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 2fr));
+  grid-gap: 5px;
+  grid-auto-flow: dense;
+  align-items: center;
+  justify-content: center;
+
+}
+
 .services-img {
-    width:100%;
-    max-width:400px;
+  width: 100%;
+    max-width:700px;
     border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
 }
 
 .services-img:hover {opacity: 0.7;}
+
 
 /* Style the Image Used to Trigger the Modal */
 .modal-img {
